@@ -1,8 +1,8 @@
 Package: rio
 Type: Package
 Title: A Swiss-Army Knife for Data I/O
-Version: 0.3.2
-Date: 2016-01-20
+Version: 0.3.3
+Date: 2016-02-10
 Maintainer: Thomas J. Leeper <thosjleeper@gmail.com>
 Authors@R: c(person("Jason", "Becker", role = "aut"),
              person("Chung-hong", "Chan", role = "aut", email = "chainsawtiney@gmail.com"),
